--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^2.0.1",
     "karma-mocha-reporter": "git+https://github.com/javascriptru/karma-mocha-reporter.git",
-    "karma-viewport": "^1.0.6"
+    "karma-viewport": "^1.0.6",
+    "webpack": "^5.99.9",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   }
 }
